[gd_scene load_steps=5 format=3 uid="uid://camcd44vrd6wd"]

[ext_resource type="PackedScene" uid="uid://7stwkwg5lx21" path="res://entities/TileObject/TileObject.tscn" id="1_ob4h3"]
[ext_resource type="Script" uid="uid://dfgfg2pkpbe04" path="res://entities/TileItem/TileItem.gd" id="2_x4f0h"]
[ext_resource type="PackedScene" uid="uid://dybfr8n8iqq7i" path="res://entities/TileItem/ModelTileItemTestIcon.tscn" id="3_f04nv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4oy8r"]

[node name="TileItem" groups=["TileItem"] instance=ExtResource("1_ob4h3")]
collision_layer = 0
collision_mask = 0
script = ExtResource("2_x4f0h")
ObjectModel = ExtResource("3_f04nv")
ObjectHeight = 5.8

[node name="DebugIcon" parent="." index="1"]
color = Color(0.376471, 1, 0, 1)
polygon = PackedVector2Array(0, -16, 4, -4, 16, 0, 4, 4, 0, 16, -4, 4, -16, 0, -4, -4)

[node name="ItemPickupTrigger" type="Area2D" parent="." index="2"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemPickupTrigger" index="0"]
shape = SubResource("CircleShape2D_4oy8r")

[connection signal="body_entered" from="ItemPickupTrigger" to="." method="_on_item_pickup_trigger_body_entered"]
[connection signal="body_exited" from="ItemPickupTrigger" to="." method="_on_item_pickup_trigger_body_exited"]
